package ar.edu.utn.frba.dds;

public enum EstadoSolicitud {
  PENDIENTE, ACEPTADA, RECHAZADA
}
