package ar.edu.utn.frba.dds;

public enum TipoArchivo {
  CSV
}
