package ar.edu.utn.frba.dds.hecho;

public enum OriginHecho {
  CARGAMANUAL, FUENTE, PROVISTO_POR_CONTRIBUYENTE

}
