@startuml
'https://plantuml.com/sequence-diagram

class Coleccion {
    - titulo: String
    - descripcion: String
    - criteriosDePertenencia: List<Filtro>
    - fuente: Fuente
    - hechos: List<Hecho>
    + Coleccion(String, String, List<Filtro>, Fuente)
    + nombre(): String
    + visualizarHechos(List<Filtro>): void
    + cargarHechosDesdeFuente(): void
    + imprimirHechosFiltrados(List<Filtro>): void

}

class ColectionManager {
  - colecciones: List<Coleccion>
  - hechosEliminados: List<Hecho>
  - solicitudesEliminacionHechos: List<SolicitudEliminacion>

  + ColectionManager()
  + crearColeccion(nombre: String, descripcion: String, filtros: List<Filtro>, fuente: Fuente): void
  + solicitudEliminacionHecho(nombreHecho: String, justificacion: String): void
  + buscarHechoPorNombreDentroDeColecciones(nombreHecho: String): Hecho
  + fueAceptada(solicitudEliminacion: SolicitudEliminacion): void
  + fueRechazada(solicitudEliminacion: SolicitudEliminacion): void

}

enum EstadoSolicitud {
  PENDIENTE
  ACEPTADA
  RECHAZADA
}

class Fuente {
  - tipoArchivo: TipoArchivo
  - pathArchivo: String

  + Fuente(tipoArchivo: TipoArchivo, pathArchivo: String)
}

enum TipoArchivo {
  CSV
}

class Hecho {
  - titulo: String
  - descripcion: String
  - categoria: String
  - ubicacion: Ubicacion
  - fechaAcontecimiento: LocalDate
  - fechaDeCarga: LocalDate
  - originHecho: OriginHecho
  - fueEliminado: Boolean = false

  + Hecho(titulo: String, descripcion: String, categoria: String, ubicacion: Ubicacion, fechaAcontecimiento: LocalDate, fechaDeCarga: LocalDate, originHecho: OriginHecho)
  + eliminarHecho(): void

}

class Ubicacion {
  - latitud: Double
  - longitud: Double
  + Ubicacion(latitud: Double, longitud: Double)
  + esCoordenadaValida(latitud: Double, longitud: Double): boolean

}

enum OriginHecho {
  CARGAMANUAL
  FUENTE
  PROVISTO_POR_CONTRIBUYENTE
}

class SolicitudEliminacion {
  - hecho: Hecho
  - justificacion: String
  - estado: EstadoSolicitud
  - fechaSolicitud: Date

  + SolicitudEliminacion(hecho: Hecho, justificacion: String)
  + aceptar(): void
  + rechazar(): void
}

'filtros:'

package "filtros" {
      '### Clase Abstracta Principal
      abstract class Filtro {
        {abstract} + cumpleFiltro(hecho: Hecho): boolean
      }

    class FiltroFecha {
      - fechaDesde: LocalDate
      - fechaHasta: LocalDate
      - campoDeHechoAplicado: CampoDeHecho = FECHA_ACONTECIMIENTO
      + FiltroFecha(fechaDesde: LocalDate, fechaHasta: LocalDate)
      + cumpleFiltro(hecho: Hecho): boolean
    }

    class FiltroContieneTexto {
      - textoClave: String
      - campoDeHechoAplicado: CampoDeHecho
      + FiltroContieneTexto(textoClave: String, campoDeHechoAplicado: CampoDeHecho)
      + cumpleFiltro(hecho: Hecho): boolean
    }
}

enum CampoDeHecho {
  TITULO
  DESCRIPCION
  CATEGORIA
  FECHA_ACONTECIMIENTO
  UBICACION
  + obtenerValor(hecho: Hecho): T
}

'Usuarios:'

package "usuarios" {
    class Administrador {
        - Usuario: String
        - Password: String
        + Administrador(Usuario: String, Password: String)
        + crearColeccion(nombre: String, descripcion: String, pathArchivo: String, filtros: List<Filtro>, tipoArchivo: TipoArchivo): void
        + importarDatosDeFuenteAColeccion(nombreColeccion: String): void
        + verSolicitudesEliminacion(): void
        + aceptarSolicitudEliminacion(nombreHecho: String): void
        + obtenerSolicitudesEliminacion(): List<SolicitudEliminacion>
    }

    class Contribuyente {
        - nombre: String
        - apellido: String
        - edad: Integer
        + Contribuyente(nombre: String, apellido: String, edad: Integer)
        - esMayorDeEdad(): boolean
        + navegarHechosPorColeccionSegunFiltros(coleccion: Coleccion, filtros: List<Filtro>): void
        + solicitarEliminacionHecho(nombreHecho: String, justificacion: String): void
    }
}

'Lectores:'
package "lectores" {
    interface Lector {
        + leer(rutaArchivo: String): List<Hecho>
    }

    class LectorCSV {
        + leer(rutaArchivo: String): List<Hecho>
    }

    class LectorFactory {
        + crearLector(tipo: TipoArchivo): Lector
    }
}

' === RELACIONES ACTUALIZADAS Y LIMPIAS ===

' === COLECTIONMANAGER ===
'=== Asociaciones ==='
ColectionManager --> "*" Coleccion
ColectionManager --> "*" Hecho
ColectionManager -->"*" SolicitudEliminacion
'=== Dependencias ==='
ColectionManager ..> Filtro
ColectionManager ..> Fuente

' === COLECCION ===
'=== Asociaciones ==='
Coleccion -->"*"Filtro
Coleccion --> "*"Hecho
Coleccion --> Fuente
'=== Dependencias ==='
Coleccion ..> TipoArchivo
Coleccion ..> Lector

' === FUENTE ===
'=== Asociaciones ==='
Fuente --> TipoArchivo

' === HECHO ===
'=== Asociaciones ==='
Hecho --> Ubicacion
Hecho --> OriginHecho

' === SOLICITUD ELIMINACION ===
'=== Asociaciones ==='
SolicitudEliminacion --> Hecho
SolicitudEliminacion --> EstadoSolicitud
'=== Dependencias ==='
SolicitudEliminacion ..> ColectionManager

' === FILTRO ===
'=== Implementaciones ==='
Filtro <|-- FiltroContieneTexto
Filtro <|-- FiltroFecha
'=== Dependencias ==='
Filtro ..> Hecho

' === FILTROCONTIENETEXTO ===
'=== Asociaciones ==='
FiltroContieneTexto --> CampoDeHecho

' === FILTROFECHA ===
FiltroFecha --> CampoDeHecho


' === USUARIOS ===
'=== Dependencias ==='
Contribuyente ..> Filtro
Contribuyente ..> ColectionManager
Contribuyente ..> Hecho
Contribuyente ..> Coleccion
Administrador ..> ColectionManager
Administrador ..> SolicitudEliminacion
Administrador ..> Filtro
Administrador ..> TipoArchivo


' === LECTOR ===
' === Implementaciones ===
Lector <|.. LectorCSV
' === Asociaciones ===
Lector --> Hecho

' === LECTORCSV ===
' === Dependecias ===
LectorCSV ..> Hecho

' === LECTORFACTORY ===
' === Dependecias ===
LectorFactory ..> Lector
LectorFactory ..> TipoArchivo



@enduml